--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -38,20 +38,17 @@ bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
-+ActionMappings=(ActionName="Quit",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Quit",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Fire",Key=Gamepad_FaceButton_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
-+AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
-+AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
-+AxisMappings=(AxisName="AimElevation",Key=Gamepad_RightY,Scale=1.000000)
-+AxisMappings=(AxisName="LeftTrackThrottle",Key=Gamepad_LeftTriggerAxis,Scale=1.000000)
-+AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
-+AxisMappings=(AxisName="LeftTrackThrottle",Key=Gamepad_LeftShoulder,Scale=-0.500000)
-+AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightShoulder,Scale=-0.500000)
-+AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
-+AxisMappings=(AxisName="TurnClockwise",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=-1.000000)
++AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="TurnClockwise",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="TurnClockwise",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightTrigger,Scale=1.000000)
++AxisMappings=(AxisName="LeftTrackThrottle",Key=Gamepad_LeftTrigger,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
