--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/_Levels/BattleGround.BattleGround
 GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
+GlobalDefaultGameMode=/Game/Blueprints/BattleTankGameMode_BP.BattleTankGameMode_BP_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
